--- a/Assignments/Scoot-Multi-Page/src/app/Components/careers/job-openings/job-openings.component.css
+++ b/Assignments/Scoot-Multi-Page/src/app/Components/careers/job-openings/job-openings.component.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 120px;
+    margin-top: 145px;
+    margin-bottom: 120px;
 }
 
 .jobCard{
@@ -65,6 +66,10 @@
 }
 @media only screen and (min-width: 767px) {
 
+    .sectionContainer{
+        margin-top: 120px;
+        margin-bottom: 120px;       
+    }
     .jobCard{
         width: 689px;
         height: 128px;
@@ -115,6 +120,10 @@
     }
 }
 @media only screen and (min-width: 1200px) {
+    .sectionContainer{
+        margin-top: 120px;
+        margin-bottom: 160px;
+    }
     .jobCard{
         width: 1110px;
         height: 128px;
